# Dante-DEP-Client-SDK

./: CLAUDE.md  README.md  flake.nix
cmake/: libDanteAudio.cmake
daemon/: CMakeLists.txt  dep_sync_fanoutd.cpp  dep_sync_fanoutd.service
include/dante/: DanteAudio.hpp
src/: DanteAudio.cpp
tools/: CMakeLists.txt  dep_wakeup_counter.cpp
